# ax12_manipulator

angle_s_arm_pkg/: CMakeLists.txt  package.xml
angle_s_arm_pkg/launch/: angle_arm_control.launch
angle_s_arm_pkg/nodes/: demonstration_node.py  main_to_point_node.py  vacuum_and_button.py
angle_s_arm_pkg/src/RoboticArmClass/: __init__.py
arm_controll_s/: CMakeLists.txt  package.xml
arm_controll_s/launch/: arms.launch
arm_controll_s/src/: arm_controll.cpp
palletizer_s_arm_pkg/: CMakeLists.txt  package.xml
palletizer_s_arm_pkg/launch/: palletizer_arm_control.launch
palletizer_s_arm_pkg/nodes/: demonstration_node.py  gripper_node.py  main_to_point_node.py  vacuum_and_button.py
palletizer_s_arm_pkg/src/RoboticArmPalletizerClass/: __init__.py
